--- a/docs/.vitepress/theme/styles/overrides.css
+++ b/docs/.vitepress/theme/styles/overrides.css
@@ -7,6 +7,10 @@
   margin: 2px;
 }
 
+.VPButton.brand {
+  background: linear-gradient(135deg, rgb(71, 52, 218), rgb(1, 143, 198)) !important;
+}
+
 @media (max-width: 768px) {
   .VPHome .VPHero .tagline {
     font-size: 3.5vw !important;
