--- a/docs/.vitepress/theme/styles/overrides.css
+++ b/docs/.vitepress/theme/styles/overrides.css
@@ -27,3 +27,7 @@
 .NotFound .quote {
   max-width: 500px !important;
 }
+
+.MicrosoftMap .bm_LogoContainer .bingLogoLight {
+  display: none !important;
+}
